--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-
-  
-
-
-<h1>CSS & SASS 13-dars Responsive Design @MEDIA</h1>
-<h2>Xush Kelibsiz </h2>
-
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <style>
+    h1 {
+      background-color: yellow;
+    }
+    h2 {
+      background-color: palevioletred;
+    }
+  </style>
+  <body>
+    <h1>CSS & SASS 13-dars Responsive Design @MEDIA</h1>
+    <h2>Xush Kelibsiz</h2>
+  </body>
 </html>
