--- a/index.html
+++ b/index.html
@@ -4,18 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
-  <style>
-    h1 {
-      background-color: yellow;
-    }
-    h2 {
-      background-color: palevioletred;
-    }
-  </style>
   <body>
-    <h1>CSS & SASS 13-dars Responsive Design @MEDIA</h1>
-    <h2>Xush Kelibsiz</h2>
+    <div class="container">
+      <div class="home">
+        <div class="home_left">
+          <h2>
+            Lorem ipsum dolor sit <br />
+            amet consectetur adipisicing elit.
+          </h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br />
+            Inventore aspernatur quasi voluptatibus numquam, aliquid architecto.
+          </p>
+          <button>Contact</button>
+        </div>
+        <div class="home_right">
+          <div class="img">
+            <img src="./photo_2023-08-09_15-17-26.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
