--- a/index.html
+++ b/index.html
@@ -15,24 +15,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="home">
-        <div class="home_left">
-          <h2>
-            Lorem ipsum dolor sit <br />
-            amet consectetur adipisicing elit.
-          </h2>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br />
-            Inventore aspernatur quasi voluptatibus numquam, aliquid architecto.
-          </p>
-          <button>Contact</button>
-        </div>
-        <div class="home_right">
-          <div class="img">
-            <img src="./photo_2023-08-09_15-17-26.jpg" alt="" />
-          </div>
-        </div>
-      </div>
+      <div class="box_child"></div>
+      <div class="box_child"></div>
+      <div class="box_child"></div>
+      <div class="box_child"></div>
+      <div class="box_child"></div>
+      <div class="box_child"></div>
+
     </div>
 
     <script
